# rtcamp11_Maple

./: .gitignore  CMakeLists.txt  bin2h.cmake  run.ps1
include/: accel.hpp  buffer.hpp  descriptors.hpp  env_cubemap.hpp  geometry.hpp  globals.hpp  loader.hpp  output.hpp  render.hpp  shaders.hpp  uniform.hpp  vk_setup.hpp  window.hpp
libs/: vk_setup.hpp
resource/mesh/: test.gltf
src/: accel.cpp  buffer.cpp  descriptors.cpp  gen_env_header.cpp  geometry.cpp  globals.cpp  impl_tinygltf.cpp  loader.cpp  main.cpp  output.cpp  render.cpp  shaders.cpp  uniform.cpp  vk_setup.cpp  vulkan_dispatch.cpp  window.cpp
src/shader/: anyhit.slang  closesthit.slang  common_bindings.slang  common_types.slang  miss_main.slang  miss_shadow.slang  random.slang  raygen.slang  util.slang
